# SeetaFace2Android

./: build.sh  readme.md
SeetaFace2AndroidDemo/: README.md  settings.gradle
SeetaFace2AndroidDemo/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
SeetaFace2AndroidDemo/app/src/androidTest/java/com/example/l/mobilefacenet/: ExampleInstrumentedTest.java
SeetaFace2AndroidDemo/app/src/main/res/layout/: activity_main.xml
SeetaFace2AndroidDemo/app/src/main/res/values/: strings.xml
SeetaFace2AndroidDemo/app/src/main/seetafacecpp/src/: seetaface_jni.cpp
SeetaFace2AndroidDemo/app/src/test/java/com/example/l/mobilefacenet/: ExampleUnitTest.java
SeetaFace2AndroidDemo/gradle/wrapper/: gradle-wrapper.properties
SeetaFace2AndroidDemo/openCVLibrary343/: build.gradle
SeetaFace2AndroidDemo/openCVLibrary343/src/main/: AndroidManifest.xml
SeetaFace2AndroidDemo/openCVLibrary343/src/main/java/org/opencv/android/: OpenCVLoader.java
SeetaFace2AndroidDemo/openCVLibrary343/src/main/java/org/opencv/calib3d/: Calib3d.java
SeetaFace2AndroidDemo/openCVLibrary343/src/main/java/org/opencv/core/: Core.java
SeetaFace2AndroidDemo/openCVLibrary343/src/main/java/org/opencv/dnn/: Dnn.java  Layer.java  Net.java
SeetaFace2AndroidDemo/openCVLibrary343/src/main/java/org/opencv/imgproc/: Imgproc.java
SeetaFace2AndroidDemo/openCVLibrary343/src/main/java/org/opencv/photo/: Photo.java  TonemapDurand.java
SeetaFace2AndroidDemo/openCVLibrary343/src/main/java/org/opencv/videoio/: VideoCapture.java  VideoWriter.java  Videoio.java
SeetaFace2AndroidLib/: CMakeLists.txt
SeetaFace2AndroidLib/java/seetatech/seetaface/: SeetaFace.java  SeetaImageData.java  SeetaRect.java
SeetaFace2AndroidLib/src/: seetaface_jni.cpp
